--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+body { 
+  margin: 0; 
+  font-family: 'Gotham', 'Roboto', 'Open Sans', 'Helvetica Neue', helvetica, arial, verdana, sans-serif;
+  background-color: #fafafa;
+  padding: 0px 5px;
+  margin: 0 auto;
+  font-size: 13px;
+  // display: flex;
+  // flex-direction: row;
+  // justify-content: flex-start;
+  // flex-wrap: wrap;
+  max-width: 1440px;
+  overflow: auto;
+ }
